# collied

./: Cargo.toml  Dockerfile  README
src/: config.rs  error.rs  main.rs  serve.rs
src/adapter/: auth.rs  feed.rs  item.rs
src/core/auth/: key.rs  token.rs
src/models/: database.rs  key.rs
tests/: feed.hurl
tests/integration/: auth.hurl
