[package]
name = "collied"
version = "0.1.0"
description = "A daemon for Collie the minimal feed reader just for you"
authors = ["parksb <parkgds@gmail.com>"]
license = "GPL-3.0"
repository = "https://github.com/parksb/collied"
edition = "2021"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", default-features = false, features = ["clock", "serde"] }
rusqlite = "0.28"
sea-query = "0"
sea-query-rusqlite = { version = "0", features = ["with-chrono"] }
rss = "2.0"
atom_syndication = "0.12"
reqwest = { version = "0.11", features = ["blocking"] }
sha1_smol = { version = "1", features = ["std"] }
thiserror = "1.0"
regex = "1.9"
scraper = "0.18.1"
clap = { version = "4.0", features = ["derive"] }
log = "0.4"
pretty_env_logger = "0.4"
tokio = { version = "1.0", features = ["full"] }
axum = "0.7"
