[package]
name = "collied"
version = "0.1.0"
description = "A server for the minimal feed reader designed for self-hosting"
authors = ["parksb <parkgds@gmail.com>"]
license = "GPL-3.0"
repository = "https://github.com/parksb/collied"
edition = "2021"

[dependencies]
collie = { path = "../lib/collie", features = ["auth"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
clap = { version = "4.0", features = ["derive"] }
log = "0.4"
pretty_env_logger = "0.4"
tokio = { version = "1.0", features = ["full"] }
axum = { version = "0.7", features = ["http2"] }
axum-extra = { version = "0.9", features = ["typed-header"] }
daemonize = "0.5"
toml = "0.8.19"
thiserror = "1.0"
http = "1.1.0"
base64 = "0.22.1"
